--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <?php
-$arrFiles = array();
-$handle = opendir('/path/to/directory');
-if ($handle) {
-    while (($entry = readdir($handle)) !== FALSE) {
-        $arrFiles[] = $entry;
-    }
-}
-closedir($handle);
-?>
+    <a href="https://www.codewithfaraz.com/article/96/the-complete-list-of-meta-tags-in-html-2023">Meta Tags</a>
 </body>
 </html>
