--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="https://www.codewithfaraz.com/article/96/the-complete-list-of-meta-tags-in-html-2023">Meta Tags</a>
+    <a href="https://gist.github.com/lancejpollard/1978404">Github Gist</a>
 </body>
 </html>
