--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="https://www.codewithfaraz.com/article/96/the-complete-list-of-meta-tags-in-html-2023">Meta Tags</a>
     <a href="https://gist.github.com/lancejpollard/1978404">Github Gist</a>
+    <a href="https://gist.github.com/mikeludemann/e37a6f330e06497962d699b605eca135">gist</a>
 </body>
 </html>
